# hotdog

./: pyproject.toml  pyproject.toml.b
note/: julien-c-hotdog.ipynb
src/hnh/: main.py  model.py  util.py
